--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,17 +1,25 @@
 header {
-    height: 80px;
+    height: 60px;
     display: flex;
     align-items: center;
+    background-color: #242943;
 }
 
 .header__inner {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
 }
 
-.header__logo {
-    font-size: 30px;
-    line-height: 30px;
-    font-weight: 700;
+.currentRateUAH__item {
+    text-align: center;
+    width: 150px;
+    color: #fff;
+    border-radius: 5px;
+    padding: 5px;
+    background-color: #2c324f;
+
+    &:first-child {
+        margin-right: 20px;
+    }
 }
