--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,9 +2,25 @@
     padding: 0;
     margin: 0;
     font-family: 'Open Sans', sans-serif;
+    box-sizing: content-box;
 }
+
 
 .container {
     width: 1140px;
     margin: 0 auto;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 48
 }
